hw_3/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-home-work
spec:
  selector:
      app: home-work
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
